Finished Preference Button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="use_boards">Use Boards:</string>
     <string name="extras2">Extras:</string>
     <string name="use_boards_extras">Use Boards: Extras:</string>
+    <string name="select_all">Select All</string>
 </resources>
