--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Galaxy</string>
     <string name="galaxy_trucker_randomizer">Galaxy Trucker Randomizer</string>
     <string name="settings">Settings</string>
-    <string name="close">Close</string>
+    <string name="close">SaveClose</string>
     <string name="extras_0">Extras: 0</string>
     <string name="rounds_3">Rounds: 3</string>
     <string name="another_big_expansion">Another Big Expansion</string>
@@ -60,4 +60,5 @@
     <string name="extras2">Extras:</string>
     <string name="use_boards_extras">Use Boards: Extras:</string>
     <string name="select_all">Select All</string>
+    <string name="save_and_close">Save and Close</string>
 </resources>
