--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="support_crew">Support Team</string>
     <string name="close2">Close2</string>
     <string name="rounds_0">Rounds: 0</string>
-    <string name="textview">TextView</string>
-    <string name="textview2">TextView</string>
+    <string name="textView">TextView</string>
+    <string name="textView2">TextView</string>
     <string name="button">Button</string>
     <string name="re_randomize">Re-Randomize</string>
     <string name="restart">RESTART</string>
@@ -25,9 +25,8 @@
     <string name="iii_a">III A</string>
     <string name="help">Help</string>
     <string name="close3">Close</string>
-    <string name="textview3">TextView</string>
-    <string name="all_content_is_and_trademark_of_czech_games_edition_and_rio_grande_games_n_n_n_n_loading">All content is © and tradematrk of Czech Games Edition and Rio Grande Games.       Loading. . .</string>
-    <string name="this_is_an_unlicened_fan_created_randomizer_app_for_use_with_the_galaxy_trucker_board_game">This is an unlicensed, fan-created randomizer app for use with the Galaxy Trucker board game.</string>
+    <string name="textView3">TextView</string>
+    <string name="all_content_is_and_trademark_of_czech_games_edition_and_rio_grande_games_n_n_n_n_loading">This is an unlicensed, fan-created randomizer app for use with the Galaxy Trucker board game. All content is © and trademark of Czech Games Edition.  \n\n\n\n\n\n     Loading. . .</string>
     <string name="using_the_randomizer">Using the Randomizer</string>
     <string name="get_last_randomize">Get Last Randomize</string>
     <string name="help2">HELP</string>
